--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         </p>
                      </div>
                      <div class="image-content">
-                        <img src="files/Theme1.png" alt="Illustration" class="responsive-img">
+                        <img src="files/Theme1.PNG" alt="Illustration" class="responsive-img">
                      </div>
                   </div>
                </div>
