--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                         </p>
                         <p>
                             English Participants Wanted —> 
-                            <a href="files/Exp7_poster_UST.png" target="_blank">Nap Project</a> 
+                            <a href="files/Exp7_poster_UST.png" target="_blank">Nap Project</a> &
                             <a href="files/Exp_Eng_Poster.jpg" target="_blank">Sleep Project</a>
                         </p>
                     </div>
