--- a/index.html
+++ b/index.html
@@ -55,13 +55,15 @@
          .content-with-image {
             display: flex;
             align-items: flex-start; /* Align content at the start */
+            gap: 10px; /* Add a small gap between text and image */
          }
          .text-content {
             flex: 1;
-            padding-right: 20px;
+            padding-right: 10px; /* Reduce padding to decrease gap */
          }
          .image-content {
             flex: 0 0 auto;
+            margin-left: 10px; /* Reduce margin to decrease gap */
          }
          .contact-section {
             padding-top: 20px;
