--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <title>NeuroLML Lab - Home</title>
+      <title>SLaB Lab - Home</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="description" content="SLaB Lab">
       <meta name="author" content="">
@@ -29,9 +29,9 @@
          }
          .img-container {
             display: flex;
-            justify-content: space-between;
+            justify-content: flex-start; /* Align images at the start */
             align-items: center;
-            margin-top: 20px;
+            gap: 0; /* Remove gap between images */
          }
          h4 {
             font-size: 24px;
@@ -63,7 +63,7 @@
          }
          .image-content {
             flex: 0 0 auto;
-            margin-left: 3px; /* Reduce margin to decrease gap */
+            margin-left: 0px; /* Reduce margin to decrease gap */
          }
          .contact-section {
             padding-top: 20px;
@@ -101,6 +101,9 @@
                </div>
             </div>
          </div>
+      </body>
+</html>
+
          <hr>
                <div class="span12 section">
                   <h4>WELCOME!</h4> 
