--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
          .responsive-img {
             width: 100%;
             height: auto;
-            max-width: 300px; /* Ensure images are not too wide */
+            max-width: 450px; /* Increase max-width to make the images larger */
          }
          .img-container {
             display: flex;
-            justify-content: flex-start; /* Align images at the start */
+            justify-content: center; /* Center the images in the container */
             align-items: center;
             gap: 0; /* Remove gap between images */
          }
@@ -103,6 +103,7 @@
          </div>
       </body>
 </html>
+
 
          <hr>
                <div class="span12 section">
