--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                <!-- Add this CSS to the <style> section of your HTML file -->
                <style>
                    .responsive-img {
-                       width: 100%;
+                       width: auto;
                        height: auto;
                    }
                    
