--- a/people.html
+++ b/people.html
@@ -82,7 +82,7 @@
                 <div class="navbar-inner">
                     <div class="container">
                         <ul class="nav">
-                            <li class="active"><a href="#">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li><a href="people.html">Members</a></li>
                             <li><a href="publications.html">Publications</a></li>
                             <li><a href="grants.html">Facilities</a></li>
