--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <li class="active"><a href="#">Home</a></li>
                             <li><a href="people.html">Members</a></li>
                             <li><a href="publications.html">Publications</a></li>
-                            <li><a href="grants.html">Facilities</a></li>
+                            <li><a href="facilities.html">Facilities</a></li>
                             <li><a href="media.html">Collaboration & Outreach</a></li>
                         </ul>
                     </div>
