--- a/index.html
+++ b/index.html
@@ -92,12 +92,29 @@
                 </div>
             </div>
         </div>
-
+         <meta charset="UTF-8">
+             <meta name="viewport" content="width=device-width, initial-scale=1.0">
+             <title>Responsive Images</title>
+             <style>
+                 .small-img {
+                     max-width: 50%;
+                     height: auto;
+                     display: block;
+                     margin: 0 auto;
+                 }
+                 
+                 .large-img {
+                     max-width: 80%;
+                     height: auto;
+                     display: block;
+                     margin: 0 auto;
+                 }
+             </style>
         <div class="row-fluid">
             <div class="span12">
                <div class="img-container">
-                  <img src="files/slab_letter.png" class="responsive-img" alt="">
-                  <img src="files/Photo_Homepage.jpg" class="responsive-img" alt="">
+                  <img src="files/slab_letter.png" class="small-img" alt="">
+                  <img src="files/Photo_Homepage.jpg" class="large-img" alt="">
                </div>
             </div>
          </div>
