--- a/index.html
+++ b/index.html
@@ -97,30 +97,42 @@
              <title>Responsive Images</title>
              <style>
                  .small-img {
-                     max-width: 20%;
+                     max-width: 30%;
                      height: auto;
                      display: block;
                      margin: 0 auto;
                  }
                  
                  .large-img {
-                     max-width: 80%;
+                     max-width: 60%;
                      height: auto;
                      display: block;
                      margin: 0 auto;
                  }
-             </style>
-        <div class="row-fluid">
-            <div class="span12">
-               <div class="img-container">
-                  <img src="files/slab_letter.png" class="small-img" alt="">
-                  <img src="files/Photo_Homepage.jpg" class="large-img" alt="">
-               </div>
-            </div>
-         </div>
-      </body>
-</html>
-
+                .text {
+            text-align: center;
+                 }
+               </head>
+               <body>
+                   <div class="row-fluid">
+                       <div class="span12">
+                           <div class="img-container">
+                               <div style="display: flex; justify-content: space-between;">
+                                   <div style="flex: 1;">
+                                       <img src="files/slab_letter.png" class="small-img" alt="Slab Letter">
+                                       <div class="text">
+                                           <a href="#">More Info</a>
+                                       </div>
+                                   </div>
+                                   <div style="flex: 1;">
+                                       <img src="files/Photo_Homepage.jpg" class="large-img" alt="Photo Homepage">
+                                   </div>
+                               </div>
+                           </div>
+                       </div>
+                   </div>
+               </body>
+               </html>
 
          <hr>
                <div class="span12 section">
