--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                  }
                  
                  .large-img {
-                     max-width: 60%;
+                     max-width: 50%;
                      height: auto;
                      display: block;
                      margin: 0 auto;
@@ -121,7 +121,7 @@
                                    <div style="flex: 1;">
                                        <img src="files/slab_letter.png" class="small-img" alt="Slab Letter">
                                        <div class="text">
-                                           <a href="#">More Info</a>
+                                           <a href="https://huma.hkust.edu.hk/">More Info</a>
                                        </div>
                                    </div>
                                    <div style="flex: 1;">
