--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
             </div>
         </div>
-         <meta charset="UTF-8">
+                 <meta charset="UTF-8">
              <meta name="viewport" content="width=device-width, initial-scale=1.0">
              <title>Responsive Images</title>
              <style>
@@ -104,32 +104,22 @@
                  }
                  
                  .large-img {
-                     max-width: 50%;
+                     max-width: 60%;
                      height: auto;
                      display: block;
                      margin: 0 auto;
                  }
-                .text {
-            text-align: center;
-                 }
-                   <div class="row-fluid">
-                       <div class="span12">
-                           <div class="img-container">
-                               <div style="display: flex; justify-content: space-between;">
-                                   <div style="flex: 1;">
-                                       <img src="files/slab_letter.png" class="small-img" alt="Slab Letter">
-                                       <div class="text">
-                                           <a href="https://huma.hkust.edu.hk/">More Info</a>
-                                       </div>
-                                   </div>
-                                   <div style="flex: 1;">
-                                       <img src="files/Photo_Homepage.jpg" class="large-img" alt="Photo Homepage">
-                                   </div>
-                               </div>
-                           </div>
-                       </div>
-                   </div>
-
+             </style>
+        <div class="row-fluid">
+            <div class="span12">
+               <div class="img-container">
+                  <img src="files/slab_letter.png" class="small-img" alt="">
+                  <img src="files/Photo_Homepage.jpg" class="large-img" alt="">
+               </div>
+            </div>
+         </div>
+      </body>
+</html>
          <hr>
                <div class="span12 section">
                   <h4>WELCOME!</h4> 
