--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
                     <div style="flex: 1;">
                         <img src="files/slab_letter.png" class="small-img" alt="Slab Letter">
                         <div class="text">
-                            <a href="https://huma.hkust.edu.hk/">More Info</a>
+                           <p>We are based in the <a href="https://huma.hkust.edu.hk/">Division of Humanities</a> at Hong Kong University of Science and Technology.
+                            <p>
                         </div>
                     </div>
                     <div style="flex: 1;">
