--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
              <title>Responsive Images</title>
              <style>
                  .small-img {
-                     max-width: 30%;
+                     max-width: 50%;
                      height: auto;
                      display: block;
                      margin: 0 auto;
@@ -120,7 +120,7 @@
                     <div style="flex: 1;">
                         <img src="files/slab_letter.png" class="small-img" alt="Slab Letter">
                         <div class="text">
-                           <p>We are based in the <a href="https://huma.hkust.edu.hk/">Division of Humanities</a> at Hong Kong University of Science and Technology.
+                           <p>We are based in the <a href="https://huma.hkust.edu.hk/ target="_blank"">Division of Humanities</a> at Hong Kong University of Science and Technology.
                             <p>
                         </div>
                     </div>
