--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                <div class="img-container">
                  <div style="display: flex; justify-content: space-between;">
                     <div style="flex: 1;">
-                        <img src="files/slab_letter.png" class="small-img" alt="Slab Letter">
+                        <img src="files/welcometoslab.png" class="small-img" alt="Slab Letter">
                         <div class="text">
                            <p>We are based in the <a href="https://huma.hkust.edu.hk/ target="_blank"">Division of Humanities</a> at Hong Kong University of Science and Technology.
                             <p>
@@ -135,10 +135,7 @@
 </html>
          <hr>
                <div class="span12 section">
-                  <h4>WELCOME!</h4> 
-                  <p>
-                     We are based in the Division of Humanities at Hong Kong University of Science and Technology.
-                  </p>
+
                </div>
             
 
