--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <div style="flex: 1;">
                         <img src="files/welcometoslab.png" class="small-img" alt="Slab Letter">
                         <div class="text">
-                           <p>We are based in the <a href="https://huma.hkust.edu.hk/ target="_blank"">Division of Humanities</a> at Hong Kong University of Science and Technology.
+                           <p>We are based in the <a href="https://huma.hkust.edu.hk/" target="_blank">Division of Humanities</a> at Hong Kong University of Science and Technology.
                             <p>
                         </div>
                     </div>
@@ -202,6 +202,10 @@
                             max-width: 50%; /* 设置图片最大宽度为父元素宽度的一半，可以根据需要调整百分比 */
                             height: auto; /* 保持图片的纵横比 */
                       }
+                      .smaller2-img {
+                            max-width: 30%;
+                            height: auto;
+                      }
                   </style>
                   
                   <!-- First Content Block -->
@@ -213,7 +217,7 @@
                           </p>
                       </div>
                       <div class="image-content">
-                          <img src="files/Theme1.PNG" alt="Illustration" class="responsive-img theme-img smaller1-img">
+                          <img src="files/Theme1.PNG" alt="Illustration" class="responsive-img theme-img smaller2-img">
                       </div>
                   </div>
                   
@@ -226,8 +230,7 @@
                           </p>
                           <p>
                               English Participants Wanted —> 
-                              <a href="files/Exp7_poster_UST.png" target="_blank">Nap Project</a> &
-                              <a href="files/Exp_Eng_Poster.jpg" target="_blank">Sleep Project</a>
+                              <a href="files/Exp7_poster_UST.png" target="_blank">Nap Project</a> & <a href="files/Exp_Eng_Poster.jpg" target="_blank">Sleep Project</a>
                           </p>
                       </div>
                       <div class="image-content">
@@ -244,7 +247,7 @@
                           </p>
                       </div>
                       <div class="image-content">
-                          <img src="files/Theme3.PNG" alt="Illustration" class="responsive-img theme-img smaller1-img">
+                          <img src="files/Theme3.PNG" alt="Illustration" class="responsive-img theme-img smaller2-img">
                       </div>
                   </div>
 
