--- a/index.html
+++ b/index.html
@@ -269,6 +269,53 @@
             </div>
          </div>	    
       </div>
+<div class="span10 section contact-section">
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>Google Maps with Text Example</title>
+    <style>
+        /* 设置整体布局为 Flexbox */
+        .container {
+            display: flex;
+        }
+
+        /* 左侧文本区域样式 */
+        .text {
+            flex: 2; 
+            padding: 20px;
+        }
+
+        /* 右侧地图区域样式 */
+        #map {
+            flex: 1; 
+            height: 400px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <!-- 左侧文本区域 -->
+        <div class="text">
+            <h2>Location Information</h2>
+            <h4>Contact us!</h4>
+                  <p>
+                     ​Email: <a href="mailto:qinlabhkust@gmail.com">qinlabhkust@gmail.com</a><br>
+                     Location: Room G005,</a><br>
+                     Cheng Yu Tung Building,</a><br>
+                     The Hong Kong University of Science and Technology,</a><br>
+                     Clear Water Bay, Kowloon, Hong Kong</a><br>
+                  </p>
+        </div>
+        <!-- 右侧地图区域 -->
+        <div id="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d158858.30910382626!2d-0.14005699632671495!3d51.50104799283726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f35!3m3!1m2!1s0x4876040fd06e7753%3A0xe32c235d6c3c3e!2sBuckingham%20Palace!5e0!3m2!1sen!2suk!4v1630942538704!5m2!1sen!2suk" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+    </div>
+</body>
+</html>
+
+
       <footer id="footer">
          <div class="container-fluid">
             <p>&copy; 2024 SLaB Lab. All rights reserved.</p>
