--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 
                   
                   
-
+<div class="span10 section">
       <footer id="footer">
          <div class="container-fluid">
             <p>&copy; 2024 SLaB Lab. All rights reserved.</p>
