--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
                       
                       .content-with-image {
                           display: flex;
+                          align-items: center; /* Align the image and text at the center */
                           gap: 20px; /* Space between text and image */
                       }
                   
@@ -293,7 +294,7 @@
                               </p>
                       </div>
                       <div class="image-content">
-                           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d158858.30910382626!2d-0.14005699632671495!3d51.50104799283726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f35!3m3!1m2!1s0x4876040fd06e7753%3A0xe32c235d6c3c3e!2sBuckingham%20Palace!5e0!3m2!1sen!2suk!4v1630942538704!5m2!1sen!2suk" allowfullscreen="" loading="lazy"></iframe>
+                           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3691.8062456806808!2d114.2705682144671!3d22.33700794717057!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f35!3m3!1m2!1s0x3403a98767c2b2db%3A0x518f1d8f1b4f9887!2sCheng%20Yu%20Tung%20Building!5e0!3m2!1sen!2shk!4v1630942538704!5m2!1sen!2shk" allowfullscreen="" loading="lazy“></iframe>
                        </div>
                       </div>
                   </div>
