--- a/people.html
+++ b/people.html
@@ -113,7 +113,7 @@
                      </div>
 		     
 		     <div class="item">
-                        <img src="files/ICPhS 2023.png" class="carousel-image" alt="" style="width: auto; height: auto;">
+                        <img src="files/ICPhS 2023.jpg" class="carousel-image" alt="" style="width: auto; height: auto;">
                         <div class="carousel-caption">
                            <h4>ICPhS 2023 at Prague</h4>
                         </div>
