--- a/people.html
+++ b/people.html
@@ -99,7 +99,7 @@
                   <div class="carousel-inner">
 			  
                      <div class="item active">
-                        <img src="files/Photo1.jpg" class="carousel-image" alt="" style="width: auto; height: auto;">                      
+                        <img src="files/Photo1.jpg" class="carousel-image" alt="" style="width: 50%; height: 50%;">                      
                         <div class="carousel-caption">
                            <h4>2022 Farewell Lunch</h4>
                         </div>
