--- a/people.html
+++ b/people.html
@@ -23,9 +23,9 @@
             background-color: white;
          }
          .responsive-img {
-            width: 100%;
+            width: auto;
             height: auto;
-            max-width: 450px; /* Increase max-width to make the images larger */
+            /*max-width: 450px; /* Increase max-width to make the images larger */
          }
          .img-container {
             display: flex;
@@ -99,7 +99,7 @@
                   <div class="carousel-inner">
 			  
                      <div class="item active">
-                        <img src="files/Photo1.jpg" class="carousel-image" alt="" style="width: 50%; height: 50%;">                      
+                        <img src="files/Photo1.jpg" class="carousel-image" alt="" style="width: auto; height: auto;">                      
                         <div class="carousel-caption">
                            <h4>2022 Farewell Lunch</h4>
                         </div>
