--- a/people.html
+++ b/people.html
@@ -196,7 +196,7 @@
                         <p>Quentin is an Assistant Professor of Linguistics in the Division of Humanities at the Hong Kong University of Science and Technology. He is also Associate Director of ​Center for Chinese Linguistics and a  faculty associate of Center for Aging Science, HKUST. He got his Ph.D degree in Linguistics from the Department of Linguistics, University of Kansas. Prior to joining the faculty at HKUST, he worked as Postdoctoral Researcher at the Research Center for Language, Cognition, and Neuroscience, Hong Kong Polytechnic University. </p>
 			<p>Editorial Board member & co-editor for the "Language Processing" collection, <i>Scientific Reports</i><br/>Academic Editor, <i>PLOS ONE</i><br/>Associate Editor, <i>Frontiers in Psychology</i></p>
                         <p><b>Email: </b><a href="mailto:hmzqin@ust.hk">hmzqin@ust.hk</a></p>
-                        <p><b><a href="https://sites.google.com/site/qinzhenquentin/">Personal Website</a>, <a href="https://orcid.org/0000-0002-6117-7809">ORCID ID</a>, <a href="https://www.researchgate.net/profile/Caicai-Zhang">Curriculum Vitae</a></b></p>
+                        <p><b><a href="https://sites.google.com/site/qinzhenquentin/">Personal Website</a>, <a href="https://www.researchgate.net/profile/Caicai-Zhang">Curriculum Vitae</a>, <a href="https://orcid.org/0000-0002-6117-7809">ORCID ID</a></b></p>
                      </div>
                   </div>
                </section>
@@ -249,11 +249,11 @@
                         <img src="thumbs/Photo_Jeremy.jpg" alt="Jeremy, Yin To CHUI"/>
                      </div>
                      <div class="span9">
-                        <h4>Hansy Jueyao LIN</h4>
-			<p><i>PhD candidate</i></p>
-                        <p>Jueyao received her BA in Chinese and Bilingual Studies focusing on Linguistic and Speech Sciences from Hong Kong Polytechnic University and MSocSc in Psychology from City University of Hong Kong. Her research interest includes memory, learning and reading difficulties, ERP studies on children with language disorders, and related psychometric analysis.</p>
-                        <p><b>Email: </b><a href="mailto:jueyao-hansy.lin@connect.polyu.hk">jueyao-hansy.lin@connect.polyu.hk</a></p>
-			<p><b><a href="https://www.researchgate.net/profile/Lin-Jueyao">ResearchGate</a></b></p>
+                        <h4>Jeremy, Yin To CHUI 徐彥韜 (BA: CUHK; MA: PolyU; MPhil: UST)</h4>
+			<p><i>Ph.D Student (HKPFS awardee)</i></p>
+                        <p>Jeremy graduated with an MA degree in Teaching Chinese as a Foreign Language from HK PolyU. He is interested in speech perception as well as the cognitive and computational mechanisms behind perceptual learning. Currently, he is working on whether, and to what extent, younger and older adults make statistical inferences (e.g. distributional information, word-referent co-occurrences) in the implicit perceptual learning L2 lexical tone categories. His previous MPhil project studied the statistical learning of Mandarin lexical tones and how individual differences played a role in learning. Jeremy’s Ph.D study is funded by the Hong Kong PhD Fellowship.</p>
+                        <p><b>Email: </b><a href="mailto:​ytchuiac@connect.ust.hk">​ytchuiac@connect.ust.hk</a></p>
+			<p><b><a href="https://www.researchgate.net/profile/Yin-To-Chui">ResearchGate</a>, <a href="https://www.researchgate.net/profile/Caicai-Zhang">Curriculum Vitae</a>, <a href="https://orcid.org/0000-0002-2169-086X">ORCID ID</a></b></p>
                      </div>
                   </div>
 		  <hr>   
@@ -263,11 +263,11 @@
                         <img src="thumbs/Photo_Yuqi.jpg" alt="Yuqi Wang"/>
                      </div>
                      <div class="span9">
-                        <h4>Lu LI</h4>
-			<p><i>PhD student</i></p>
-                        <p>Lu graduated from Fudan University with a BA Degree in Russian and the University of Edinburgh with an MSc degree in Phonetics. She is interested in phonetics and neurolinguistics. Currently, she is working on the associations between sleep and language development in Cantonese-speaking children.</p>
-                        <p><b>Email: </b><a href="mailto:lu-lucia.li@connect.polyu.hk">lu-lucia.li@connect.polyu.hk</a></p>
-			<p><b><a href="https://www.researchgate.net/profile/Lu-Li-172">ResearchGate</a></b></p>
+                        <h4>Yuqi WANG 王宇琪 (BA: Tianjin U; MPhil: UST)</h4>
+			<p><i>Ph.D Student (HKPFS awardee)</i></p>
+                        <p>Yuqi graduated from Tianjin University with a BA Degree in English and from HKUST with an MPhil Degree in Humanities. She is interested in aging and the bilingual effect on cognition. She is now working on how language and other experiences (e.g. learning and using more than one language, music training, etc.) benefit one's cognitive abilities (e.g. attention and memory). Her MPhil thesis studied how individual bilingual experiences of younger Cantonese-English speakers influence the attentional control ability in a Forced-attention Dichotic Listening Task of Cantonese tones. Yuqi's PhD study is funded by the Hong Kong PhD Fellowship.</p>
+                        <p><b>Email: </b><a href="mailto:ywangqi@connect.ust.hk">ywangqi@connect.ust.hk</a></p>
+			<p><b><a href="https://www.researchgate.net/profile/Yuqi-Wang-98">ResearchGate</a>, <a href="https://www.researchgate.net/profile/Caicai-Zhang">Curriculum Vitae</a>, <a href="https://orcid.org/0009-0000-1794-9747​">ORCID ID</a></b></p>
                      </div>
                   </div>
 		  <hr>   
