--- a/people.html
+++ b/people.html
@@ -194,7 +194,6 @@
                      <div class="span9">
                         <h4>Quentin Zhen QIN 秦震  Ph.D.</h4>
                         <p>Quentin is an Assistant Professor of Linguistics in the Division of Humanities at the Hong Kong University of Science and Technology. He is also Associate Director of ​Center for Chinese Linguistics and a  faculty associate of Center for Aging Science, HKUST. He got his Ph.D degree in Linguistics from the Department of Linguistics, University of Kansas. Prior to joining the faculty at HKUST, he worked as Postdoctoral Researcher at the Research Center for Language, Cognition, and Neuroscience, Hong Kong Polytechnic University. </p>
-			<p>Editorial Board member & co-editor for the "Language Processing" collection, <i>Scientific Reports</i><br/>Academic Editor, <i>PLOS ONE</i><br/>Associate Editor, <i>Frontiers in Psychology</i></p>
                         <p><b>Email: </b><a href="mailto:hmzqin@ust.hk">hmzqin@ust.hk</a></p>
                         <p><b><a href="https://sites.google.com/site/qinzhenquentin/">Personal Website</a>, <a href="https://www.researchgate.net/profile/Caicai-Zhang">Curriculum Vitae</a>, <a href="https://orcid.org/0000-0002-6117-7809">ORCID ID</a></b></p>
                      </div>
@@ -277,11 +276,11 @@
                         <img src="thumbs/Photo_Kangdi.jpg" alt="Kangdi Liu"/>
                      </div>
                      <div class="span9">
-                        <h4>Jiayi LU</h4>
-			<p><i>PhD student</i></p>
-                        <p>Jiayi graduated from Lancaster University with a BA Hons Degree in Linguistics and a minor in English Language. She received her MSc degree in Phonetics from the University of Edinburgh. Her research interests include experimental phonetics, psycholinguistics, and neurolinguistics. Currently, Jiayi is exploring the relationship between language, memory and brain development of Cantonese-speaking children. Additionally, she is actively involved in an ongoing project that focuses on sleep-mediated memory consolidation in the process of second language tone learning.</p>
-                        <p><b>Email: </b><a href="mailto:rachel-jiayi.lu@connect.polyu.hk">rachel-jiayi.lu@connect.polyu.hk</a></p>
-			<p><b><a href="https://www.researchgate.net/profile/Jiayi-Lu-17">ResearchGate</a></b></p>
+                        <h4>Kangdi LIU 劉康迪 (BA: NENU; MA: Nankai)</h4>
+			<p><i>MPhil Student</i></p>
+                        <p>Kangdi graduated from Nankai University with a master's degree in Linguistics and Applied Linguistics. She is interested in phonetics and psycholinguistics, especially focusing on Chinese tones. Her past project studied tone variation and change in the Chinese dialects/languages. At present, she is working on the beneficial effect of prior knowledge on older adults’ memory consolidation in nonnative tone learning.</p>
+                        <p><b>Email: </b><a href="mailto:​kliubc@connect.ust.hk">​kliubc@connect.ust.hk</a></p>
+			<p><b><a href="https://www.researchgate.net/profile/Kangdi-Liu">ResearchGate</a>, <a href="https://www.researchgate.net/profile/Caicai-Zhang">Curriculum Vitae</a>, <a href="https://orcid.org/0009-0008-1548-4040​​">ORCID ID</a></b></p>
                      </div>
                   </div>
 		  <hr>   
@@ -298,7 +297,7 @@
                         <img src="thumbs/Photo_Jeremy.jpg" alt="Jeremy, Yin To CHUI"/>
                      </div>
                      <div class="span9">
-                        <h4>Hansy Jueyao LIN</h4>
+                        <h4>Cindy, Rui JIN 金蕊  (Senior Research Assistant, 2021-2022)</h4>
 			<p><i>PhD candidate</i></p>
                         <p>Jueyao received her BA in Chinese and Bilingual Studies focusing on Linguistic and Speech Sciences from Hong Kong Polytechnic University and MSocSc in Psychology from City University of Hong Kong. Her research interest includes memory, learning and reading difficulties, ERP studies on children with language disorders, and related psychometric analysis.</p>
                         <p><b>Email: </b><a href="mailto:jueyao-hansy.lin@connect.polyu.hk">jueyao-hansy.lin@connect.polyu.hk</a></p>
