--- a/people.html
+++ b/people.html
@@ -294,14 +294,11 @@
 
 	          <div class="row-fluid">
                      <div class="span3">
-                        <img src="thumbs/Photo_Jeremy.jpg" alt="Jeremy, Yin To CHUI"/>
+                        <img src="thumbs/Photo_Cindy.png" alt="Jeremy, Yin To CHUI"/>
                      </div>
                      <div class="span9">
                         <h4>Cindy, Rui JIN 金蕊  (Senior Research Assistant, 2021-2022)</h4>
-			<p><i>PhD candidate</i></p>
-                        <p>Jueyao received her BA in Chinese and Bilingual Studies focusing on Linguistic and Speech Sciences from Hong Kong Polytechnic University and MSocSc in Psychology from City University of Hong Kong. Her research interest includes memory, learning and reading difficulties, ERP studies on children with language disorders, and related psychometric analysis.</p>
-                        <p><b>Email: </b><a href="mailto:jueyao-hansy.lin@connect.polyu.hk">jueyao-hansy.lin@connect.polyu.hk</a></p>
-			<p><b><a href="https://www.researchgate.net/profile/Lin-Jueyao">ResearchGate</a></b></p>
+                        <p> Cindy is currently a Ph.D student in Psychology at the University of Florida. </p>
                      </div>
                   </div>
 		  <hr>   
@@ -311,11 +308,8 @@
                         <img src="thumbs/Photo_Ruofan_edited.jpg" alt="Ruofan Wu"/>
                      </div>
                      <div class="span9">
-                        <h4>Lu LI</h4>
-			<p><i>PhD student</i></p>
-                        <p>Lu graduated from Fudan University with a BA Degree in Russian and the University of Edinburgh with an MSc degree in Phonetics. She is interested in phonetics and neurolinguistics. Currently, she is working on the associations between sleep and language development in Cantonese-speaking children.</p>
-                        <p><b>Email: </b><a href="mailto:lu-lucia.li@connect.polyu.hk">lu-lucia.li@connect.polyu.hk</a></p>
-			<p><b><a href="https://www.researchgate.net/profile/Lu-Li-172">ResearchGate</a></b></p>
+                        <h4>Ruofan WU 吳若繁 (Research Assistant, 2022-2023)</h4>
+                        <p>Ruofan is currently a Ph.D student at the Hong Kong Polytechnic University. </p>
                      </div>
                   </div>
 		  <hr>   
