--- a/people.html
+++ b/people.html
@@ -195,7 +195,7 @@
                         <h4>Quentin Zhen QIN 秦震  Ph.D.</h4>
                         <p>Quentin is an Assistant Professor of Linguistics in the Division of Humanities at the Hong Kong University of Science and Technology. He is also Associate Director of ​Center for Chinese Linguistics and a  faculty associate of Center for Aging Science, HKUST. He got his Ph.D degree in Linguistics from the Department of Linguistics, University of Kansas. Prior to joining the faculty at HKUST, he worked as Postdoctoral Researcher at the Research Center for Language, Cognition, and Neuroscience, Hong Kong Polytechnic University. </p>
                         <p><b>Email: </b><a href="mailto:hmzqin@ust.hk">hmzqin@ust.hk</a></p>
-                        <p><b><a href="https://sites.google.com/site/qinzhenquentin/">Personal Website</a>, <a href="https://www.researchgate.net/profile/Caicai-Zhang">Curriculum Vitae</a>, <a href="https://orcid.org/0000-0002-6117-7809">ORCID ID</a></b></p>
+                        <p><b><a href="https://sites.google.com/site/qinzhenquentin/">Personal Website</a>, <a href="files/C.V._Zhen Qin_Research.pdf">Curriculum Vitae</a>, <a href="https://orcid.org/0000-0002-6117-7809">ORCID ID</a></b></p>
                      </div>
                   </div>
                </section>
