--- a/people.html
+++ b/people.html
@@ -157,7 +157,9 @@
          </div>
 
          <hr>
-
+               <section id="staff">
+                  <div class="page-header">
+                     <h3>Principle Investigator</h3>
                      <div class="span9">
                         <h4>Quentin Zhen QIN 秦震  Ph.D.</h4>
                         <p>Quentin is an Assistant Professor of Linguistics in the Division of Humanities at the Hong Kong University of Science and Technology. He is also Associate Director of ​Center for Chinese Linguistics and a  faculty associate of Center for Aging Science, HKUST. He got his Ph.D degree in Linguistics from the Department of Linguistics, University of Kansas. Prior to joining the faculty at HKUST, he worked as Postdoctoral Researcher at the Research Center for Language, Cognition, and Neuroscience, Hong Kong Polytechnic University. </p>
